# push_swap

./: CMakeLists.txt  Makefile  main.c  push_swap  push_swap.h  rotates.c  utils.c
Moves/: pushes.c  rev_rotates.c
algorythm_big/: cost_math.c  cost_tools_bckward.c  cost_tools_forward.c  order_checkers.c  pre_sort.c  rotate_tools.c  sort_stacks.c
algorythm_small/: rotate_tools.c  sort_stacks.c  sort_tools.c
algorythme/: order_checkers.c  rotate_tools.c  sort_stacks.c  sorte_tools.c  swap_tools.c
algorythme_1/: order_checkers.c  rotate_tools.c  sort_stacks.c  sort_tools.c  sorte_tools.c
algorythme_2/: cost_math.c  cost_tools_bckward.c  cost_tools_forward.c  order_checkers.c  pre_sort.c  rotate_tools.c  sort_stacks.c
checker/: checker.h  main_checker.c
checker_files/: Makefile  argument_manager_bn.c  checker.h  checker_arg_manager.c  checker_errors.c  ft_lstadd_back_bn.c  ft_lstclear_bn.c  ft_lstlast_bn.c  ft_lstsize_bn.c  main_checker.c  move_tools_bn.c  pushes_bn.c  rev_rotates_bn.c  rotates_bn.c  struct_tools_bn.c  swaps_bn.c
errors/: error_manager.c
ft_printf_ps/: Makefile  ft_printf.c  ft_printf.h  ft_printf_functions.c  ft_printf_hex_functions.c
libft/: Makefile  ft_atoi.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  libft.h
libft/get_next_line/: get_next_line.h
moves/: move_tools.c  pushes.c  rev_rotates.c  rotates.c  swaps.c
structs/: argument_manager.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  struct_tools.c
